node-ports/cosmo/cosmo-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: cosmo-service
spec: 
  selector: 
    app: cosmo
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
