node-ports/cosmo/cosmo-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: cosmo-service
spec: 
  type: NodePort
  selector: 
    app: cosmo
  ports: 
    - port: 8087
      targetPort: 80
      nodePort: 30008
