node-ports/cosmo/cosmo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmo-ingress
spec:
  rules:
  - host: cosmo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cosmo-service
            port:
              number: 8087
